# schachmatt

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: demo.rs  fen.rs  pgn_export.rs  pgn_import.rs
src/: lib.rs
src/data_structures/: board_descriptors.rs  field.rs  field_occupation.rs  game_result.rs  mod.rs  player_color.rs  turn.rs
src/data_structures/piece/: mod.rs  move_iterators.rs  piece_move_iterator.rs  piece_type.rs
src/game/: game_api.rs  game_internal.rs  game_struct.rs  mod.rs
src/position/: mod.rs  position_api.rs  position_internal.rs  position_struct.rs
src/position/util/: castling_rights.rs  errors.rs  mod.rs  move_legality.rs
src/tests/: mod.rs
src/tests/game_tests/: game_over_check_test.rs  get_possible_moves_test.rs  mod.rs  turn_tests.rs
src/tests/parser/: fen_tests.rs  lan_tests.rs  mod.rs  pgn_tests.rs  san_tests.rs
src/util/: castle_data.rs  mod.rs
src/util/error/: error_messages.rs  mod.rs  parser_error.rs
src/util/parser/: mod.rs
src/util/parser/forsyth_edwards_notation/: error.rs  export.rs  import.rs  mod.rs
src/util/pest_definitions/: long_algebraic_notation.pest  portable_game_notation.pest  standard_algebraic_notation.pest
tests/: mod.rs  position.rs
tests/parser/: mod.rs
tests/parser/forsyth_edwards_notation/: import.rs
tests/parser/long_algebraic_notation/: export.rs  import.rs
tests/parser/portable_game_notation/: export.rs  import.rs
tests/parser/standard_algbraic_notation/: export.rs  import.rs
tests/parser/standard_algebraic_notation/: export.rs  import.rs
(+19 files in other folders)
