[package]
name = "schachmatt"
version = "0.2.0"
description = "A chess library"
license = "MIT"
edition = "2024"
repository = "https://github.com/jonasbindrim/schachmatt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.8"
pest_derive = "2.8"
thiserror = "2.0.12"

[dev-dependencies]
rand = "0.9"
